--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "dotenv-webpack": "^1.5.4",
     "standard": "^10.0.3",
     "webpack": "^3.5.3",
     "webpack-dashboard": "^0.4.0",
