--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "d3": "^4.10.0",
     "firebase": "^4.2.0",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -30,8 +31,13 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.4",
     "dotenv-webpack": "^1.5.4",
     "standard": "^10.0.3",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.3",
     "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "^2.7.1"
