--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "d3": "^4.10.0",
     "firebase": "^4.2.0",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "redux-saga-firebase": "^0.3.0"
