--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "redux-saga-firebase": "^0.4.2",
+    "reselect": "^3.0.1",
     "styled-components": "^2.1.2"
   },
   "devDependencies": {
