Add service to follow a board.

--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,2 @@
+FOLLOW_URL=https://us-central1-project.cloudfunctions.net/followBoard
 HOOK_URL=https://us-central1-project.cloudfunctions.net/trelloHook
