--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^4.2.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
