--- a/circle.yml
+++ b/circle.yml
@@ -61,7 +61,7 @@ jobs:
 
       - run:
           name: Setup env file
-          command: echo "FOLLOW_URL=$FOLLOW_URL\nHOOK_URL=$nHOOK_URL" > .env
+          command: echo "FOLLOW_URL=$FOLLOW_URL" >> .env && echo "HOOK_URL=$HOOK_URL" >> .env
 
       - run:
           name: Deploy
