--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,9 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "cors": "^2.8.4",
-    "firebase-admin": "~5.10.0",
-    "firebase-functions": "^0.8.1"
+    "firebase-admin": "^5.11.0",
+    "firebase-backup": "^0.0.3-d",
+    "firebase-functions": "^0.8.2"
   },
   "private": true
 }
