--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "url": "git+https://github.com/n6g7/autokaizen.git"
   },
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack -p --mode=production",
     "deploy": "yarn build && firebase deploy",
     "deploy:ci": "yarn deploy --token $FIREBASE_TOKEN --project $FIREBASE_PROJECT",
-    "dev": "webpack-dashboard -- webpack-dev-server",
+    "dev": "webpack-dev-server --mode=development",
     "test": "standard"
   },
   "dependencies": {
@@ -41,21 +41,21 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "dotenv-webpack": "^1.5.4",
+    "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.7",
     "standard": "^10.0.3",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.5.3",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.7.1"
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "standard": {
     "ignore": [
