--- a/package.json
+++ b/package.json
@@ -18,23 +18,24 @@
     "test": "standard"
   },
   "dependencies": {
+    "@firebase/app-types": "^0.3.2",
     "@vx/axis": "^0.0.138",
     "@vx/group": "^0.0.136",
     "@vx/scale": "^0.0.136",
     "d3": "^4.10.0",
-    "firebase": "^4.2.0",
+    "firebase": "^5.1.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "next",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.15.6",
-    "redux-saga-firebase": "^0.6.0",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^4.0.0",
+    "redux-saga": "^1.0.0-beta.1",
+    "redux-saga-firebase": "^0.14.0",
     "reselect": "^3.0.1",
     "styled-components": "^3.3.3"
   },
