--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^5.1.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
+    "luxon": "^1.3.0",
     "moment": "^2.18.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
