--- a/package.json
+++ b/package.json
@@ -18,45 +18,48 @@
     "test": "standard"
   },
   "dependencies": {
-    "@firebase/app-types": "^0.3.2",
-    "@vx/axis": "^0.0.179",
-    "@vx/group": "^0.0.165",
-    "@vx/scale": "^0.0.179",
-    "d3": "^5.5.0",
-    "firebase": "^5.2.0",
-    "history": "^4.7.2",
-    "lodash": "^4.17.10",
-    "luxon": "^1.3.0",
-    "moment": "^2.22.2",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^4.0.0",
-    "redux-saga": "^1.0.0-beta.1",
-    "redux-saga-firebase": "^0.14.0",
+    "@firebase/app-types": "^0.3.10",
+    "@vx/axis": "^0.0.184",
+    "@vx/group": "^0.0.183",
+    "@vx/scale": "^0.0.182",
+    "connected-react-router": "^6.4.0",
+    "d3": "^5.9.2",
+    "firebase": "^5.11.1",
+    "history": "^4.9.0",
+    "lodash": "^4.17.11",
+    "luxon": "^1.13.0",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "redux-saga-firebase": "^0.15.0",
     "reselect": "^4.0.0",
-    "styled-components": "^4.0.0"
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
-    "@babel/polyfill": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-react": "^7.0.0-beta.51",
-    "@babel/preset-stage-3": "^7.0.0-beta.51",
-    "@babel/runtime": "^7.0.0-beta.51",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.0-beta.3",
-    "dotenv-webpack": "^1.5.7",
-    "standard": "^11.0.1",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "babel-loader": "^8.0.5",
+    "dotenv-webpack": "^1.7.0",
+    "standard": "^12.0.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "standard": {
     "ignore": [
