--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
   "javascript.validate.enable": false,
-  "standard.autoFixOnSave": true,
-  "standard.enable": true,
 
   "[javascript]": {
     "editor.tabSize": 2
-  },
+  }
 }
